--- a/src/styles/components/header-menu/header-menu.css
+++ b/src/styles/components/header-menu/header-menu.css
@@ -322,7 +322,7 @@
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: transparent;
+  background-color: var(--primary);
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
   z-index: 1;
   min-width: 160px;
