--- a/src/styles/components/header-menu/header-menu.mobile.css
+++ b/src/styles/components/header-menu/header-menu.mobile.css
@@ -19,34 +19,26 @@
     z-index: -1;
     right: 0;
     /* width: calc(100vh * 16 / 9); */
-
     height: 100vh;
-
     pointer-events: none;
-
     touch-action: none;
   }
 
   .HeaderMenu_menu__mobile {
     position: absolute;
     z-index: var(--z-index-menu);
-
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-
     height: 56px;
-
     color: var(--bright);
     background-color: transparent;
-
     inset: 0;
     -webkit-overflow-scrolling: touch;
   }
 
   .HeaderMenu_menuContainer__open.HeaderMenu_menu__mobile {
     height: 100vh;
-
     background: var(--gradient-main);
   }
 
@@ -61,7 +53,6 @@
   .HeaderMenu_menuContainer {
     display: flex;
     justify-content: space-between;
-
     width: 100%;
     height: 32px;
     padding: 28px 16px;
@@ -105,16 +96,13 @@
     max-width: 32px;
     min-height: 32px;
     max-height: 32px;
-
     border: none;
     outline: none;
   }
 
   .HeaderMenu_burgerBlock input {
     z-index: -999;
-
     margin: 0;
-
     opacity: 0;
   }
 
@@ -124,22 +112,17 @@
     right: 0;
     bottom: 0;
     left: 0;
-
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-
     padding: 5px 1px;
-
     cursor: pointer;
   }
 
   .HeaderMenu_burger span {
     min-width: 100%;
     height: 2.5px;
-
     transition: all 300ms ease;
-
     border-radius: 8px;
     background-color: var(--bright);
   }
@@ -165,7 +148,6 @@
   .HeaderMenu_linksBlockMobile {
     flex-direction: column;
     justify-content: space-between;
-
     width: 100vw;
     height: calc(100vh + (var(--vh-px, 0) - 100vh) - 42px);
   }
@@ -174,7 +156,6 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-
     height: 100%;
     margin: 0 16px;
   }
@@ -203,7 +184,6 @@
     align-items: center;
     flex-direction: column;
     justify-content: center;
-
     margin: 40px 0;
   }
 
@@ -239,5 +219,61 @@
 
   .HeaderMenu_headerGetFreeDemo {
     margin-right: 0;
+  }
+
+  /* Dropdown Styles */
+  .dropdown {
+    position: relative;
+    display: inline-block;
+    width: fit-content;
+    margin-bottom: 30px;
+    padding-bottom: 20px;
+  }
+
+  .dropbtn {
+    background-color: transparent;
+    color: var(--bright);
+    font-family: "Rubik", sans-serif;
+    font-weight: 300;
+    border: none;
+    cursor: pointer;
+    padding: 0;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 38px;
+  }
+
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: var(--primary);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+    z-index: 1;
+    min-width: 160px;
+  }
+
+  .dropdown-content a {
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 38px;
+  }
+
+  .dropdown-content a:hover {
+    background-color: #ffffff;
+    color: var(--primary);
+  }
+
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+
+  .HeaderMenu_menu__sticky .dropbtn {
+    color: var(--text-black);
   }
 }
